--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -1,6 +1,5 @@
 
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,7 +10,7 @@
 
 :root {
   /* Base surfaces */
-  --color-bg-primary: #f5f5f5;      /* Main background */
+  --color-bg-primary: #f8f5ee;      /* Main background */
   --color-bg-secondary: #ccd3d9;    /* Sections, cards */
 
   /* Brand */
@@ -25,8 +24,6 @@
   /* Supporting */
   --color-border-soft: #d1c7b1;     /* Dividers, subtle borders */
 }
-
-
 
 body {
   @apply antialiased;
@@ -58,4 +55,73 @@ body {
   .animate-fade-in-up {
     animation: fade-in-up 0.8s ease-out;
   }
+}
+
+.brush-underline {
+  width: min(320px, 70vw);
+  height: auto;
+}
+
+.brush-underline__path {
+  fill: none;
+  stroke: #D9B573;
+  stroke-width: 16;
+  stroke-dasharray: 1700;
+  stroke-dashoffset: 1700;
+  animation: draw-path 1.6s ease-in-out forwards;
+    animation-delay: 0.9s;
+
+}
+
+@keyframes draw-path {
+  to {
+    stroke-dashoffset: 1200;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-100% - 1rem));
+  }
+}
+
+.animate-scroll {
+  animation: scroll var(--animation-duration, 40s) var(--animation-direction, forwards) linear infinite;
+}
+
+@layer base {
+  .theme {
+    --animate-marquee: marquee var(--duration) infinite linear;
+    --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+  }
+}
+
+/* Correct usage */
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+  }
+}
+
+@keyframes marquee-vertical {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(calc(-100% - var(--gap)));
+  }
+}
+
+
+.animate-marquee {
+  animation: marquee var(--duration) infinite linear;
+}
+.animate-marquee-vertical {
+  animation: marquee-vertical var(--duration) linear infinite;
 }
